// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterMiddleDesktop component renders correctly 1`] = `
<Fragment>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={0}
      headerAsImage={true}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={1}
      headerAsImage={true}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={2}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={3}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={4}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={5}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
</Fragment>
`;

exports[`FooterMiddleDesktop component renders correctly 2`] = `
<Fragment>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={0}
      headerAsImage={true}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={1}
      headerAsImage={true}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    className="divider"
    colSize={
      Object {
        "large": 1,
        "medium": 8,
        "small": 6,
      }
    }
  />
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={2}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={3}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
    <FooterNavLinks
      className="footer-links"
      colNum={4}
      isSubHeader={true}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
  <Styled(Col)
    colSize={
      Object {
        "large": 2,
        "medium": 8,
        "small": 6,
      }
    }
  >
    <FooterNavLinks
      className="footer-links"
      colNum={5}
      isUserLoggedIn={false}
      navLinkItems={
        Object {
          "header": "",
          "links": Array [],
        }
      }
      openTrackOrder={[Function]}
    />
  </Styled(Col)>
</Fragment>
`;
